--- a/index.html
+++ b/index.html
@@ -41,7 +41,71 @@
 
   <main class="main-section">
 
-  
+    <!-- Tarjetas de comida -->
+  <section class="wrap section">
+    <div class="wrap-title-section">
+      <h2>Tarjetas de Comida</h2>
+    </div>
+    <div class="column-4 columns">
+      <div style="background:url(img/pizza-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+        <div class="wrap-text_tarjeta-rest">
+          <h3>Pizza Especial</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
+          <div class="cta-wrap_tarjeta-rest">
+            <div class="precio_tarjeta-rest">
+              <span>12€</span>
+            </div>
+            <div class="cta_tarjeta-rest">
+              <a href="">Pedir ahora</a>
+            </div>
+          </div>
+        </div>  
+      </div>
+      <div style="background:url(img/hamburguesas-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+        <div class="wrap-text_tarjeta-rest">
+          <h3>Pizza Especial</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
+          <div class="cta-wrap_tarjeta-rest">
+            <div class="precio_tarjeta-rest">
+              <span>12€</span>
+            </div>
+            <div class="cta_tarjeta-rest">
+              <a href="">Pedir ahora</a>
+            </div>
+          </div>
+        </div>  
+      </div>
+      <div style="background:url(img/sushi-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+        <div class="wrap-text_tarjeta-rest">
+          <h3>Pizza Especial</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
+          <div class="cta-wrap_tarjeta-rest">
+            <div class="precio_tarjeta-rest">
+              <span>12€</span>
+            </div>
+            <div class="cta_tarjeta-rest">
+              <a href="">Pedir ahora</a>
+            </div>
+          </div>
+        </div>  
+      </div>
+      <div style="background:url(img/alitas-pollo-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+        <div class="wrap-text_tarjeta-rest">
+          <h3>Pizza Especial</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
+          <div class="cta-wrap_tarjeta-rest">
+            <div class="precio_tarjeta-rest">
+              <span>12€</span>
+            </div>
+            <div class="cta_tarjeta-rest">
+              <a href="">Pedir ahora</a>
+            </div>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </section>
+    
       <!-- Aquí van a ir todas las secciones -->
       
       <!-- Poner todo el código a partir de aquí -->
@@ -50,3 +114,4 @@
 
   </main>
 <!-- Cierre de la etiqueta main -->
+
