--- a/index.html
+++ b/index.html
@@ -165,6 +165,52 @@
         </div>
       </div>
     </section>
+
+      <!-- Galería de imágenes -->
+    <section class="section">
+      <div class="wrap-title-section">
+        <h2>Galería de imágenes</h2>
+      </div>
+      <div class="column-4 galeria-platos">
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        <div class="imagen-galeria">
+          <img src="img/foto galeria.jpg" alt="">
+        </div>
+        
+      </div>
+    </section>
       <!-- Aquí van a ir todas las secciones -->
       
       <!-- Poner todo el código a partir de aquí -->
