--- a/index.html
+++ b/index.html
@@ -211,6 +211,84 @@
         
       </div>
     </section>
+
+    <!-- Articulos de Blog  -->
+  <section class="section">
+    <div class="wrap-title-section">
+      <h2>Artículos del Blog</h2>
+    </div>
+    <div class="card-wrap">
+      <article class="card">
+        <header class="header-card">
+          <img src="img/plato-blog-1.jpg" alt="">
+        </header>
+        <footer class="footer-card">
+          <div class="categoria-card">
+            <span>Categoría</span>
+          </div>
+          <div class="texto-card">
+            <h3>Lorem ipsum dolor sit.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatibus mollitia voluptas ducimus maxime numquam modi suscipit eius tempore ad?</p>
+          </div>
+          <div class="perfil-card">
+            <div class="img-perfil-card">
+              <img src="img/perfil-1.jpg" alt="">
+            </div>
+            <div class="text-perfil-card">
+              <span>Nombre</span>
+              <span>Fecha</span>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article class="card">
+        <header class="header-card">
+          <img src="img/plato-blog-2.jpg" alt="">
+        </header>
+        <footer class="footer-card">
+          <div class="categoria-card">
+            <span>Categoría</span>
+          </div>
+          <div class="texto-card">
+            <h3>Lorem ipsum dolor sit.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatibus mollitia voluptas ducimus maxime numquam modi suscipit eius tempore ad?</p>
+          </div>
+          <div class="perfil-card">
+            <div class="img-perfil-card">
+              <img src="img/perfil-2.jpg" alt="">
+            </div>
+            <div class="text-perfil-card">
+              <span>Nombre</span>
+              <span>Fecha</span>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article class="card">
+        <header class="header-card">
+          <img src="img/plato-blog-3.jpg" alt="">
+        </header>
+        <footer class="footer-card">
+          <div class="categoria-card">
+            <span>Categoría</span>
+          </div>
+          <div class="texto-card">
+            <h3>Lorem ipsum dolor sit.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatibus mollitia voluptas ducimus maxime numquam modi suscipit eius tempore ad?</p>
+          </div>
+          <div class="perfil-card">
+            <div class="img-perfil-card">
+              <img src="img/perfil-3.jpg" alt="">
+            </div>
+            <div class="text-perfil-card">
+              <span>Nombre</span>
+              <span>Fecha</span>
+            </div>
+          </div>
+        </footer>
+      </article>
+    </div>
+  </section>
       <!-- Aquí van a ir todas las secciones -->
       
       <!-- Poner todo el código a partir de aquí -->
