--- a/index.html
+++ b/index.html
@@ -289,6 +289,168 @@
       </article>
     </div>
   </section>
+
+    <section class="wrap">
+  <div class="wrap-title-section">
+    <h2>Hamburguesas</h2>
+  </div>
+  <div class="wrap column-2 carta">
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/bocadillo-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/bocadillo-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div> 
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/bocadillo-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/bocadillo-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>    
+  </div>
+  <div class="wrap-title-section">
+    <h2>Pizzas</h2>
+  </div>
+  <div class="wrap column-2 carta">
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pizza.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pizza.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div> 
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pizza.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pizza.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>   
+  </div>
+  <div class="wrap-title-section">
+    <h2>Pastas</h2>
+  </div>
+  <div class="wrap column-2 carta">
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pasta-fresca-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pasta-fresca-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div> 
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pasta-fresca-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>
+    <div class="plato-carta">
+      <div class="img-plato-carta">
+        <img src="img/pasta-fresca-carta.png" alt="">
+      </div>
+      <div class="title-plato-carta">
+        <h4>Lorem, ipsum dolor.</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="precio-plato-carta">
+        <span>9€</span>
+      </div>
+    </div>   
+  </div>
+</section>
       <!-- Aquí van a ir todas las secciones -->
       
       <!-- Poner todo el código a partir de aquí -->
