--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="header-wrap">
     <div class="wrap-logo-header">
       <a class="logo-header" href="/">
-        WebDeRestaurante
+        Traditional flavor
       </a>
     </div>
     <div class="wrap-nav-header">
