--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>Tarjetas de Comida</h2>
     </div>
     <div class="column-4 columns">
-      <div style="background:url(img/pizza-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+      <div style="background:url(WhatsApp\ Image\ 2024-04-26\ at\ 8.51.48\ PM.jpeg)center;background-size: cover;" class="tarjeta-rest">
         <div class="wrap-text_tarjeta-rest">
           <h3>Pizza Especial</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
@@ -61,7 +61,7 @@
           </div>
         </div>  
       </div>
-      <div style="background:url(img/hamburguesas-bg.jpg)center;background-size: cover;" class="tarjeta-rest">
+      <div style="background:url(WhatsApp\ Image\ 2024-04-26\ at\ 8.51.48\ PM.jpeg)center;background-size: cover;" class="tarjeta-rest">
         <div class="wrap-text_tarjeta-rest">
           <h3>Pizza Especial</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aliquid iure animi, quos tempora voluptas.</p>
