--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poller+One&display=swap">
+  <link rel="stylesheet" href="WhatsApp Image 2024-04-26 at 8.51.48 PM.jpeg">
 </head>
 <body>
 <div class="wrap-header-hero">
