--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>Touché</h1>
+            <h1>Gabo SS Traditional Flavor</h1>
             <p>Restaurant / Coffee / Pub</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Discover Story</a> </div>
         </div>
